--- a/WebApp.Identity/Views/Home/Login.cshtml
+++ b/WebApp.Identity/Views/Home/Login.cshtml
@@ -30,6 +30,10 @@
 </div>
 
 <div>
+    <a asp-controller="Home" asp-action="ForgotPassword">Esqueci minha senha</a>
+</div>
+
+<div>
     <a asp-action="Index">Back to List</a>
 </div>
 
